dvbmanager: only read/write longitude/latitude for USALS setup

On DVB-S/S2, latitude and longitude are used only for USALS
setup. It doesn't make sense to save/restore otherwise.

That fixes a bug that would be saving random numbers at
config.dvb.

BUG: 400268

Signed-off-by: Mauro Carvalho Chehab <mchehab+samsung@kernel.org>